# smelt

./: .dockerignore  Cargo.toml  Containerfile.cuda  Containerfile.vulkan  Makefile  README.md  hold-my-beer-spec.md
scripts/: build-container.sh  install-backend.sh
src/: main.rs
